# caoc

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.ninja
2024/1/: problem.md  solution.c  solution.h  test.c
include/: 2024.h
src/2024/: 01.c  01_a.c  01_b.c  02.c  2024.h
tests/2024/: 01_test.c  02_test.c  2024_01.c
utils/: assert.h
